# jumbo

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml  publish.yml
benches/: parse_c2pa.rs  simple_data_box.rs
src/: box_type.rs  debug.rs  lib.rs  toggles.rs
src/builder/: data_box_builder.rs  mod.rs  placeholder_data_box.rs  super_box_builder.rs  to_box.rs
src/parser/: boxes.rs  cow_source.rs  data_box.rs  description_box.rs  error.rs  mod.rs  source.rs  super_box.rs
src/tests/: box_type.rs  debug.rs  mod.rs
src/tests/builder/: data_box_builder.rs  mod.rs  placeholder_data_box.rs  super_box_builder.rs
src/tests/parser/: boxes.rs  data_box.rs  description_box.rs  mod.rs  source.rs  super_box.rs  super_box_depth_limit.rs
