[package]
name = "jumbf"
version = "0.4.0"
description = "A JUMBF (ISO/IEC 19566-5:2023) parser and builder written in pure Rust."
repository = "https://github.com/scouten-adobe/jumbf-rs"
documentation = "https://docs.rs/jumbf"
readme = "README.md"
authors = ["Eric Scouten <scouten@adobe.com>"]
keywords = ["jumbf"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.74.0"

[features]
default = ["parser"]
parser = ["nom", "thiserror"]

[dependencies]
nom = { version = "7.1", optional = true, default_features = false, features = ["std"] }
thiserror = { version = "1.0.58", optional = true }

[dev-dependencies]
codspeed-criterion-compat = "2.4"
criterion = "0.5.1"
hex-literal = "0.4.1"
pretty_assertions_sorted = "1.2.3"

[[bench]]
name = "simple_data_box"
harness = false
