[package]
name = "jumbf"
version = "0.4.1"
description = "A JUMBF (ISO/IEC 19566-5:2023) parser and builder written in pure Rust."
authors = ["Eric Scouten <scouten@adobe.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/jumbf"
repository = "https://github.com/scouten-adobe/jumbf-rs"
readme = "README.md"
edition = "2021"
keywords = ["jumbf"]
categories = ["parsing"]
rust-version = "1.74.0"

[features]
default = ["parser"]
parser = ["thiserror"]

[dependencies]
thiserror = { version = "1.0.58", optional = true }

[dev-dependencies]
codspeed-criterion-compat = "2.4"
criterion = "0.5.1"
hex-literal = "0.4.1"
pretty_assertions_sorted = "1.2.3"

[[bench]]
name = "simple_data_box"
harness = false

[[bench]]
name = "parse_c2pa"
harness = false
